--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ channel_url: https://teams.microsoft.com/v2/
 bot_display_name: Your Bot Name
 headful: true
 persist_profile_dir: .pw-profile
+storage_state_file: auth_state.json
 wait_after_send_sec: 35
 max_retries: 2
 screenshot: true
