--- a/examples/teams_recon.yaml
+++ b/examples/teams_recon.yaml
@@ -22,6 +22,9 @@ use_tk_controls: true
 mention_fast_mode_on_ui: true
 mention_type_char_delay_ms_fast: 10
 mention_type_char_delay_ms: 10
+# mention timing (optional overrides)
+mention_type_char_delay_ms_fast: 100
+mention_popup_wait_ms: 1200
 
 # --- graph manual poll ---
 graph_tenant_id: "YOUR_TENANT_GUID"
